[package]
name = "neos-api"
version = "0.3.0"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3" # uses tokio 1.0
futures = { version = "0.3", default-features = false }
systemstat = "0.1"
