[package]
name = "neos-api"
version = "0.4.1"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.1", features = ["full"] }
warp = "0.3" # uses tokio 1.0
futures = { version = "0.3", default-features = false }
systemstat = "0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14"
hyper-tls = "0.5"
lazy_static = "^1.4"
bytes = "^1.0"
