[package]
name = "neos-api"
version = "0.5.0"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.1.0", features = ["full"] }
warp = "~0.3.0" # uses tokio 1.0
futures = { version = "^0.3.0", default-features = false }
systemstat = "^0.1.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
hyper = "~0.14.0"
hyper-tls = "~0.5.0"
lazy_static = "^1.4"
bytes = "^1.0.0"
chrono = "^0.4.0"
app_dirs = "^1.2.1"
